# django-ajaxmessages

./: .gitignore  LICENSE.md  README.md  pyproject.toml
