[tool.poetry]
name = "django-ajaxmessages"
version = "0.1.0"
description = "Middleware for passing Django messages via AJAX/JSON"
authors = ["Adam Radestock <raddishiow@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = ">2.2.9, <4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
